Fix deprecation warnings in ClassLoaders